# tmux-agent-sidebar

./: CLAUDE.md  Cargo.toml  README.md  agent-sidebar.conf  renovate.json
.claude/skills/docs-audit/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: release.yml
docs/: TODO-background-shell-detection.md  state-management.md
src/: activity.rs  event.rs  group.rs  lib.rs  main.rs  port.rs  session.rs  state.rs  tmux.rs
src/adapter/: claude.rs  codex.rs  mod.rs
src/cli/: hook.rs  mod.rs  setup.rs  toggle.rs
src/state/: refresh.rs  tab.rs
src/ui/: agents.rs  bottom.rs  colors.rs  icons.rs  mod.rs  panes.rs  text.rs
src/ui/panes/: row.rs
tests/: bottom_tests.rs  color_tests.rs  panes_tests.rs  state_tests.rs  styled_tests.rs  test_helpers.rs  ui_snapshot.rs
