[package]
name = "tmux-agent-sidebar"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "A tmux sidebar that monitors AI coding agents across all windows and sessions in real-time"
repository = "https://github.com/hiroppy/tmux-agent-sidebar"

[dependencies]
ratatui = "=0.30.0"
crossterm = "=0.29.0"
unicode-width = "=0.2.2"
libc = "=0.2.184"
indexmap = "=2.14.0"
serde_json = "=1.0.149"

[dev-dependencies]
indoc = "=2.0.7"
insta = "=1.47.2"

[profile.release]
strip = true
lto = true
